improved warnings